Refactor PUT to match POST pattern for swagger detection
